test/zinc_source/compile_errors/iterations/04_tuple_index_out_of_bounds.zn
// expected-error: tuple index out of bounds

fn main() {
    item = (1, 2)
    bad = item[2]
}
